IV pdf from welcome email.

--- a/referrer-portal/src/main/resources/static/files/tempApproveEmailEnd.html
+++ b/referrer-portal/src/main/resources/static/files/tempApproveEmailEnd.html
@@ -4,7 +4,7 @@
 
 <p class=MsoNormal style='margin-bottom:12.0pt'><span style='font-size:12.0pt;
 font-family:"HelveticaNeueLT Pro 55 Roman"'>If you wish to launch InteleViewer
-within I-MED Online 2.0, <span style='color:#1F497D'><a href="https://portal.i-med.com.au/wps/wcm/connect/doctor/9a8db5a9-1414-447f-8443-a519dc122703/InteleViewer+Support+29.05.18.pdf?MOD=AJPERES&amp;amp;CVID=meFTV03&amp;amp;useDefaultText=0&amp;amp;useDefaultDesc=0">click here</a></span> to view instructions.<span style='color:#1F497D'><o:p></o:p></span></span></p>
+within I-MED Online 2.0, <span style='color:#1F497D'><a href="https://i-medonline.com.au/referrer/files/public/InteleViewer_Support_29.05.18.pdf">click here</a></span> to view instructions.<span style='color:#1F497D'><o:p></o:p></span></span></p>
 
 <p class=MsoNormal><o:p>&nbsp;</o:p></p>
 
