Deployment:T&C E-Referral login user only

--- a/referrer-portal/src/main/resources/static/files/tandc.html
+++ b/referrer-portal/src/main/resources/static/files/tandc.html
@@ -21,7 +21,7 @@
 <p class="Normal" style=" margin-top: 0pt;">&nbsp;
 </p>
 <p class="Normal" style=" line-height: 10pt;">
-  <span class="Normal__Char" style=" font-family: &#39;Arial&#39;, &#39;Arial&#39;; font-size: 11pt; line-height: 11pt; color: #1F497D;">I am a registered medical practitioner.
+  <span class="Normal__Char" style=" font-family: &#39;Arial&#39;, &#39;Arial&#39;; font-size: 11pt; line-height: 11pt; color: #1F497D;">I am a registered health practitioner.
   </span>
 </p>
 <p class="Normal">&nbsp;
