Rollback-FeedbackCRM-forbranching

--- a/referrer-portal/src/main/resources/static/files/tempApproveEmailMiddle.html
+++ b/referrer-portal/src/main/resources/static/files/tempApproveEmailMiddle.html
@@ -24,7 +24,7 @@ on the link below</b>, or copy and paste it into your browser<span
 style='color:#1F497D'>:</span><o:p></o:p></span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;font-family:"HelveticaNeueLT Pro 55 Roman"'><a
-href="https://i-medonline.com.au">https://i-medonline.com.au/referrer/login</a><o:p></o:p></span></p>
+href="https://i-medonline.com.au">https://i-medonline.com.au</a><o:p></o:p></span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;font-family:"HelveticaNeueLT Pro 55 Roman"'><o:p>&nbsp;</o:p></span></p>
 
