referrer.success@i-med.com.au ME:461460

--- a/referrer-portal/src/main/resources/static/files/tempApproveEmailEnd.html
+++ b/referrer-portal/src/main/resources/static/files/tempApproveEmailEnd.html
@@ -32,7 +32,7 @@ style='color:red;mso-fareast-language:EN-AU'><o:p></o:p></span></p>
 <p class=MsoNormal><span style='font-size:12.0pt;font-family:"HelveticaNeueLT Pro 55 Roman"'>If
 you have any questions or need support, please call the Referrer Support Team
 on 1300 147 852 (business hours, Mon-Fri) or email us at <a
-href="mailto:onlinesupport@i-med.com.au">onlinesupport@i-med.com.au</a><span
+href="mailto:referrer.success@i-med.com.au">referrer.success@i-med.com.au</a><span
 style='color:#1F497D'>.&nbsp; </span>Please note that from time to time we may
 contact you with information relating to MBS updates, changes in technology 
 and educational events. If you do not wish to be contacted, please send an email to:
