Welcome email text update. Deploy tonight.

--- a/referrer-portal/src/main/resources/static/files/tempApproveEmailEnd.html
+++ b/referrer-portal/src/main/resources/static/files/tempApproveEmailEnd.html
@@ -3,35 +3,17 @@
 <p class=MsoNormal><span style='color:#1F497D'><o:p>&nbsp;</o:p></span></p>
 
 <p class=MsoNormal style='margin-bottom:12.0pt'><span style='font-size:12.0pt;
-font-family:"HelveticaNeueLT Pro 55 Roman"'>If you wish to launch InteleViewer
-within I-MED Online 2.0, <span style='color:#1F497D'><a href="https://i-medonline.com.au/referrer/files/public/InteleViewer_Support_29.05.18.pdf">click here</a></span> to view instructions.<span style='color:#1F497D'><o:p></o:p></span></span></p>
+font-family:"HelveticaNeueLT Pro 55 Roman"'>*** IF YOU HAVE REGISTERED FOR REGIONAL ACCESS (Gippsland, Yarrawonga, Wangaratta, Wodonga, Albury, Griffith, Wagga Wagga, Tasmania, Northern Territory) - you can access images and reports by clicking on the below link, or copy and paste into your browser ***<span
+style='color:#1F497D'></span><o:p></o:p></span></p>
+
+<p class=MsoNormal><span style='font-size:12.0pt;font-family:"HelveticaNeueLT Pro 55 Roman"'><a
+href="https://pacs.ril.com.au/Portal/">https://pacs.ril.com.au/Portal/</a><o:p></o:p></span></p>
 
 <p class=MsoNormal><o:p>&nbsp;</o:p></p>
 
-<p class=MsoNormal><span style='font-size:12.0pt;font-family:"HelveticaNeueLT Pro 55 Roman"'>To
-download the I-MED Online 2.0 App onto your mobile or tablet, just search
-'I-MED Online' in your App store, or use the buttons below.<o:p></o:p></span></p>
-
-<p class=MsoNormal><span style='color:#1F497D;mso-fareast-language:EN-AU'><a
-href="https://itunes.apple.com/us/app/i-med-online/id1323846438?ls=1&amp;mt=8"><span
-style='color:windowtext;text-decoration:none;text-underline:none'><!--[if gte vml 1]><v:shape
- id="_x0000_i1026" type="#_x0000_t75" alt="" style='width:85.8pt;height:40.2pt'>
- <v:imagedata src="cid:apple"/>
-</v:shape><![endif]--><![if !vml]><img border=0 width=143 height=67
-src="cid:apple"><![endif]></span></a></span><b><span
-style='font-size:12.0pt;font-family:"HelveticaNeueLT Pro 55 Roman";color:#1F497D'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></b><span style='color:#1F497D;mso-fareast-language:EN-AU'><a
-href="http://play.google.com/store/apps/details?id=au.com.imed.app"><span
-style='color:windowtext;text-decoration:none;text-underline:none'><!--[if gte vml 1]><v:shape
- id="_x0000_i1027" type="#_x0000_t75" alt="" style='width:91.2pt;height:40.2pt'>
- <v:imagedata src="cid:google"/>
-</v:shape><![endif]--><![if !vml]><img border=0 width=152 height=67
-src="cid:google" v:shapes="_x0000_i1027"><![endif]></span></a></span><span
-style='color:red;mso-fareast-language:EN-AU'><o:p></o:p></span></p>
-
 <p class=MsoNormal><span style='font-size:12.0pt;font-family:"HelveticaNeueLT Pro 55 Roman"'>If
 you have any questions or need support, please call the Referrer Support Team
-on 1300 147 852 (business hours, Mon-Fri) or email us at <a
+on 1300 147 852 or email us at <a
 href="mailto:referrer.success@i-med.com.au">referrer.success@i-med.com.au</a><span
 style='color:#1F497D'>.&nbsp; </span>Please note that from time to time we may
 contact you with information relating to MBS updates, changes in technology 
