--- a/referrer-portal/src/main/resources/static/files/tempApproveEmailMiddle.html
+++ b/referrer-portal/src/main/resources/static/files/tempApproveEmailMiddle.html
@@ -4,15 +4,14 @@
 
 <p class=MsoNormal style='margin-bottom:12.0pt'><span style='font-size:12.0pt;
 font-family:"HelveticaNeueLT Pro 55 Roman"'>Thank you for registering for I-MED
-Online<span style='color:#1F497D'> </span>2.0 for web and mobile.<o:p></o:p></span></p>
+Online<span style='color:#1F497D'> </span>2.0.<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-bottom:12.0pt'><span style='font-size:12.0pt;
-font-family:"HelveticaNeueLT Pro 55 Roman"'>I-MED Online 2.0, with a new
-integrated App, lets you quickly and easily access your patients' images and
-reports via tablet, phone or PC.<o:p></o:p></span></p>
+font-family:"HelveticaNeueLT Pro 55 Roman"'>I-MED Online 2.0 lets you quickly and easily access your patients' images and
+reports:<o:p></o:p></span></p>
 
 <ul>
-<li style='margin-bottom:2.5pt;font-size:12.0pt;font-family:"HelveticaNeueLT Pro 55 Roman"'>View reports and images from any device</li>
+<li style='margin-bottom:2.5pt;font-size:12.0pt;font-family:"HelveticaNeueLT Pro 55 Roman"'>View reports and images</li>
 <li style='margin-bottom:2.5pt;font-size:12.0pt;font-family:"HelveticaNeueLT Pro 55 Roman"'>No need to download extra software</li>
 <li style='margin-bottom:2.5pt;font-size:12.0pt;font-family:"HelveticaNeueLT Pro 55 Roman"'>Improved download speeds</li>
 <li style='margin-bottom:2.5pt;font-size:12.0pt;font-family:"HelveticaNeueLT Pro 55 Roman"'>Streamlined search function</li>
